--- a/index.html
+++ b/index.html
@@ -1,9 +1,77 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<!--ICD2O Unit 5-04 Calculations HTML-->
+<html lang="en ca">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="descirption" content=" guess with a number until it's guessed right">
+  <meta name="keywords" content="mths, icd2o, button, clicking">
+  <meta name="author" content="sasha.vorontsov">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.dark_blue.min.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  <link rel="manifest" href="site.webmanifest" />
+  <title>Calculating Numbers by Times</title>
+</head>
+
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="js/script.js"></script>
+  <script>
+  let text = "";
+  let i = 0;
+  while (i < ("firstvalue" * "secondvalue" )) {
+  text = text + "<br>The answer is " + i;
+  i = i + 1;
+  }
+  <script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header"></div>
+  <header class="mdl-layout__header-row">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout-title"> Museum Playplace Registion </span>
+    </div>
+  </header>
+  <main class="mdl-layout__content"></main>
+  <div class="right image">
+    <p>
+      Enter 2 Values for multipication 
+    </p>
+    <div class="mdl-textfield mdl-js-textfield">
+      <!-- input pattern attribute -->
+      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?"
+        id="firstvalue" />
+      <!-- mdl-textfield__label -->
+      <label class="mdl-textfield__label" for="firstvalue"></label>
+      <!-- class "mdl-textfield__error" -->
+      <span class="mdl-textfield__error">| Enter your 1st value</span>
+    </div>
+    <div class="mdl-textfield mdl-js-textfield">
+      <!-- input pattern attribute -->
+      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?"
+        id="secondvalue" />
+      <!-- mdl-textfield__label -->
+      <label class="mdl-textfield__label" for="secondvalue"></label>
+      <!-- class "mdl-textfield__error" -->
+      <span class="mdl-textfield__error">| Enter your 2nd value</span>
+    </div>
+    <img src="./images/Canadian-Museum-of-History-exterior-054-credit-Destination-Canada-scaled.jpg"
+      alt="rectangle shape" />
+  </div>
+  <form>
+    <br />
+    <main id="clickme" class="mdl-layout__content">
+      <!-- Raised button with ripple -->
+      <button id="clickme" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+        onclick="calculaterandomnumber()" type="button">
+        calculate
+      </button>
+  </form>
+  <div>
+    <div id="answer1"></div>
+</body>
+
 </html>
